--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=vehicle-rental-2306203236-be
+spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/vehicle-rental-dev
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
+
+
+
+
+
+
+
+
