--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,15 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	testImplementation 'com.h2database:h2'//
+	implementation 'jakarta.xml.bind:jakarta.xml.bind-api-parent:4.0.2'
+	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.5'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
+
 
 }
 
