--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
+profile.service.url=http://52.45.176.93:8080/api/users/detail//
+
 
 
 
