--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -8,3 +8,12 @@ spring:
     jpa:
         hibernate:
             ddl-auto: create-drop
+            show-sql: true
+            properties:
+                hibernate:
+                    '[format_sql]': true
+
+# External services configuration
+profile:
+  service:
+    base-url: ${PROFILE_SERVICE_BASE_URL:https://2306219575-be.hafizmuh.site}
