--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -6,3 +6,17 @@ spring:
         url: ${DATABASE_URL_PROD}
         username: ${PROD_USERNAME}
         password: ${PROD_PASSWORD}
+    jpa:
+        hibernate:
+            ddl-auto: update
+        show-sql: false
+        properties:
+            hibernate:
+                '[format_sql]': false
+    mvc:
+        log-request-details: false
+
+
+profile:
+  service:
+    base-url: ${PROFILE_SERVICE_BASE_URL:https://2306219575-be.hafizmuh.site}
