--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
-profile.service.url=http://52.45.176.93:8080/api/users/detail//
+profile:
+  service:
+    base-url: ${PROFILE_SERVICE_BASE_URL:https://2306219575-be.hafizmuh.site}
 
 
 
