--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -16,4 +16,10 @@ spring:
 # External services configuration
 profile:
   service:
-    base-url: ${PROFILE_SERVICE_BASE_URL:https://2306219575-be.hafizmuh.site}
+        base-url: ${PROFILE_SERVICE_BASE_URL:https://2306219575-be.hafizmuh.site}
+        # For development only: set to true to skip TLS certificate validation when calling the profile service
+        skip-ssl-validation: ${PROFILE_SERVICE_SKIP_SSL:false}
+
+# Vehicle service API key for internal calls (from Bill Service)
+vehicle:
+  api-key: ${VEHICLE_API_KEY:test-api-key-dev}
