done loyalty be

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 profile:
   service:
-    base-url: ${PROFILE_SERVICE_BASE_URL:https://2306219575-be.hafizmuh.site}
+    base-url: ${PROFILE_SERVICE_BASE_URL:http://2306219575-be.hafizmuh.site}
 
 
 
