--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -19,4 +19,4 @@ spring:
 
 profile:
   service:
-    base-url: ${PROFILE_SERVICE_BASE_URL:https://2306219575-be.hafizmuh.site}
+    base-url: ${PROFILE_SERVICE_BASE_URL:http://2306219575-be.hafizmuh.site}
