--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -21,4 +21,6 @@ profile:
 
 # Vehicle service API key for internal calls (from Bill Service)
 vehicle:
-  api-key: ${VEHICLE_API_KEY:test-api-key-dev}
+  api-key: ${API_KEY_APAP}
+
+#   api-key: ${VEHICLE_API_KEY:test-api-key-dev} test 
