--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,4 +22,5 @@ vehicle-rental-2306203236-be:
         jwtExpirationMs: 86400000
 
 vehicle:
-    api-key: "${VEHICLE_API_KEY:test-api-key-dev}"
+  api-key: ${API_KEY_APAP}
+    # api-key: "${VEHICLE_API_KEY:test-api-key-dev}" test
