--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,13 +51,7 @@ deploy:
   before_script:
     - apk add --no-cache openssh bash
     - mkdir -p ~/.ssh
-    - |
-      if [ -n "$EC2_SSH_KEY_B64" ]; then
-        echo "$EC2_SSH_KEY_B64" | base64 -d > ~/.ssh/id_rsa
-      else
-        # if variable contains literal "\\n" sequences, expand them; also strip CRLFs
-        printf '%b' "$EC2_SSH_KEY" | tr -d '\\r' > ~/.ssh/id_rsa
-      fi
+    - echo "$EC2_SSH_KEY" > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     - ssh-keyscan -H "$EC2_HOST" >> ~/.ssh/known_hosts
   script:
