--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,8 +60,8 @@ deploy:
       printf "apiVersion: v1\nkind: ConfigMap\nmetadata:\n  name: vehiclerental-2306203236-be-config\n  namespace: default\ndata:\n  DATABASE_URL_PROD: \"%s\"\n  DATABASE_USERNAME: \"%s\"\n" \
       "$DATABASE_URL_PROD" "$DATABASE_USERNAME" > configmap.yaml
     - |
-      printf "apiVersion: v1\nkind: Secret\nmetadata:\n  name: vehiclerental-2306203236-be-secret\n  namespace: default\ntype: Opaque\nstringData:\n  DATABASE_PASSWORD: \"%s\"\n" \
-      "$DATABASE_PASSWORD" > secret.yaml
+      printf "apiVersion: v1\nkind: Secret\nmetadata:\n  name: vehiclerental-2306203236-be-secret\n  namespace: default\ntype: Opaque\nstringData:\n  DATABASE_PASSWORD: \"%s\"\n  API_KEY_APAP: \"%s\"\n" \
+      "$DATABASE_PASSWORD" "$API_KEY_APAP" > secret.yaml
     - sed "s|REPLACE_ME_TAG|$IMAGE_TAG|g" k8s/deployment.yaml > deployment.yaml
     - echo "Deploying to EC2 Kubernetes cluster..."
     - ssh $EC2_USER@$EC2_HOST "mkdir -p ~/app/2306203236-vehiclerental-be/k8s"
