--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: 2306203236-vehiclerental-be-ingress
+  name: vehiclerental-2306203236-be-ingress
   namespace: default
   annotations:
     kubernetes.io/ingress.class: traefik
