--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,16 +26,26 @@ spec:
                 configMapKeyRef:
                   name: vehiclerental-2306203236-be-config
                   key: DATABASE_URL_PROD
-            - name: DATABASE_USERNAME
+            - name: PROD_USERNAME
               valueFrom:
                 configMapKeyRef:
                   name: vehiclerental-2306203236-be-config
                   key: DATABASE_USERNAME
-            - name: DATABASE_PASSWORD
+            - name: PROD_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: vehiclerental-2306203236-be-secret
                   key: DATABASE_PASSWORD
+            # - name: DATABASE_USERNAME
+            #   valueFrom:
+            #     configMapKeyRef:
+            #       name: vehiclerental-2306203236-be-config
+            #       key: DATABASE_USERNAME
+            # - name: DATABASE_PASSWORD
+            #   valueFrom:
+            #     secretKeyRef:
+            #       name: vehiclerental-2306203236-be-secret
+            #       key: DATABASE_PASSWORD
             - name: JWT_SECRET_KEY
               valueFrom:
                 secretKeyRef:
