--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ docker-push:
   image: docker:24
   services:
     - docker:24-dind
+      command: ["--insecure-registry", "registry-1.docker.io"]
   dependencies:
     - build
   before_script:
@@ -59,9 +60,13 @@ deploy:
     - |
       printf "apiVersion: v1\nkind: ConfigMap\nmetadata:\n  name: vehiclerental-2306203236-be-config\n  namespace: default\ndata:\n  DATABASE_URL_PROD: \"%s\"\n  DATABASE_USERNAME: \"%s\"\n" \
       "$DATABASE_URL_PROD" "$DATABASE_USERNAME" > configmap.yaml
+    # - |
+    #   printf "apiVersion: v1\nkind: Secret\nmetadata:\n  name: vehiclerental-2306203236-be-secret\n  namespace: default\ntype: Opaque\nstringData:\n  DATABASE_PASSWORD: \"%s\"\n  API_KEY_APAP: \"%s\"\n" \
+    #   "$DATABASE_PASSWORD" "$API_KEY_APAP" > secret.yaml
     - |
-      printf "apiVersion: v1\nkind: Secret\nmetadata:\n  name: vehiclerental-2306203236-be-secret\n  namespace: default\ntype: Opaque\nstringData:\n  DATABASE_PASSWORD: \"%s\"\n  API_KEY_APAP: \"%s\"\n" \
-      "$DATABASE_PASSWORD" "$API_KEY_APAP" > secret.yaml
+      printf "apiVersion: v1\nkind: Secret\nmetadata:\n  name: vehiclerental-2306203236-be-secret\n  namespace: default\ntype: Opaque\nstringData:\n  DATABASE_PASSWORD: \"%s\"\n  API_KEY_APAP: \"%s\"\n  JWT_SECRET_KEY: \"%s\"\n  CORS_ALLOWED_ORIGINS: \"%s\"\n" \
+      "$DATABASE_PASSWORD" "$API_KEY_APAP" "$JWT_SECRET_KEY" "$CORS_ALLOWED_ORIGINS" > secret.yaml
+
     - sed "s|REPLACE_ME_TAG|$IMAGE_TAG|g" k8s/deployment.yaml > deployment.yaml
     - echo "Deploying to EC2 Kubernetes cluster..."
     - ssh $EC2_USER@$EC2_HOST "mkdir -p ~/app/2306203236-vehiclerental-be/k8s"
