--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ docker-push:
   image: docker:24
   services:
     - docker:24-dind
-      command: ["--insecure-registry=registry-1.docker.io"]
+      # command: ["--insecure-registry=registry-1.docker.io"]
   dependencies:
     - build
   before_script:
