--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,26 +1,31 @@
 spring:
-    config:
-        import: optional:file:.env[.properties]
-    datasource:
-        url: ${DATABASE_URL_DEV}
-        username: ${DEV_USERNAME}
-        password: ${DEV_PASSWORD}
-    jpa:
+  config:
+    import: optional:file:.env[.properties]
+  datasource:
+    url: ${DATABASE_URL_DEV}
+    username: ${DEV_USERNAME}
+    password: ${DEV_PASSWORD}
+  jpa:
+    hibernate:
+      ddl-auto: update
+      show-sql: true
+      properties:
         hibernate:
-            ddl-auto: update
-            show-sql: true
-            properties:
-                hibernate:
-                    '[format_sql]': true
+          "[format_sql]": true
 
 # External services configuration
 profile:
   service:
-        base-url: ${PROFILE_SERVICE_BASE_URL:http://2306219575-be.hafizmuh.site}
-        skip-ssl-validation: ${PROFILE_SERVICE_SKIP_SSL:false}
+    base-url: ${PROFILE_SERVICE_BASE_URL:http://2306219575-be.hafizmuh.site}
+    skip-ssl-validation: ${PROFILE_SERVICE_SKIP_SSL:false}
+
+# Bill service configuration
+bill:
+  service:
+    base-url: ${BILL_SERVICE_BASE_URL:http://localhost:8081}
 
 # Vehicle service API key for internal calls (from Bill Service)
 vehicle:
-#    api-key: ${API_KEY_APAP}
+  #    api-key: ${API_KEY_APAP}
 
-   api-key: ${VEHICLE_API_KEY:test-api-key-dev} #test 
+  api-key: ${VEHICLE_API_KEY:test-api-key-dev} #test
