--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,23 +1,27 @@
 spring:
-    config:
-        import: optional:file:.env[.properties]
-        # import: optional:../../../.env[.properties]
+  config:
+    import: optional:file:.env[.properties]
+    # import: optional:../../../.env[.properties]
 
-    datasource:
-        url: ${DATABASE_URL_PROD}
-        username: ${PROD_USERNAME}
-        password: ${PROD_PASSWORD}
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: false
-        properties:
-            hibernate:
-                '[format_sql]': false
-    mvc:
-        log-request-details: false
-
+  datasource:
+    url: ${DATABASE_URL_PROD}
+    username: ${PROD_USERNAME}
+    password: ${PROD_PASSWORD}
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: false
+    properties:
+      hibernate:
+        "[format_sql]": false
+  mvc:
+    log-request-details: false
 
 profile:
   service:
     base-url: ${PROFILE_SERVICE_BASE_URL:http://2306219575-be.hafizmuh.site}
+
+# Bill service configuration
+bill:
+  service:
+    base-url: ${BILL_SERVICE_BASE_URL:http://localhost:8081}
